Article blocks need a static width otherwise we cannot clip the images so on tablet landscape we go to a column layout to avoid "sitting flush next to each other"
ready #329

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-latest.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-latest.scss
@@ -16,7 +16,7 @@
 		@include size(100%, auto);
 		font-size: 0;
 		display: flex;
-		justify-content: space-between;
+		justify-content: space-around;
 		flex-wrap: wrap;
 
 		.component-block-article-teaser {
@@ -27,7 +27,8 @@
 
 	@include respond-to(LARGE) {
 		.latest-articles {
-			justify-content: center;
+			align-items: center;
+			flex-direction: column;
 		}
 	}
 
