Reduce the padding on the image-with-content block for X_LARGE, LARGE and MEDIUM devices
ready #328

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-image-with-content.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-image-with-content.scss
@@ -23,6 +23,18 @@
 		background: #fff;
 		padding: $sizeGrid * 2 $sizeGrid * 2.5;
 
+		@include respond-to(X_LARGE) {
+			padding: $sizeGrid * 2;
+		}
+
+		@include respond-to(LARGE) {
+			padding: $sizeGrid * 1.5;
+		}
+
+		@include respond-to(MEDIUM) {
+			padding: $sizeGrid;
+		}
+
 		&:after {
 			position: absolute;
 			bottom: 0;
