Truncating on the path to purchase content to avoid overlap

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-path-to-purchase/block-path-to-purchase.html
@@ -25,7 +25,7 @@
 							<p class="copy copy-01" data-bind="html: paragraph"></p>
 
 							<div class="secondary-content">
-								<p class="copy copy-01" data-bind="html: secondaryParagraph"></p>
+								<p class="copy copy-01" data-bind="html: $root.StringUtils.truncate(secondaryParagraph, 150)"></p>
 							</div>
 						</div>
 						<div class="step-edge"></div>
