--- a/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
@@ -33,7 +33,7 @@
 					<!-- ko template: { name: 'link-icon', data: Object.assign({icon: 'twitter'}, $data.twitter) } --><!-- /ko -->
 				</li>
 				<li>
-					<!-- ko template: { name: 'link-icon', data: Object.assign({icon: 'instagram'}, $data.instagram) } --><!-- /ko -->
+					<!-- ko template: { name: 'link-icon', data: Object.assign({icon: 'vimeo'}, $data.vimeo) } --><!-- /ko -->
 				</li>
 				<li>
 					<!-- ko template: { name: 'link-icon', data: Object.assign({icon: 'linkedin'}, $data.linkedin) } --><!-- /ko -->
