dummy content on local Latest block tweaks

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-filter-content/block-filter-content.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-filter-content/block-filter-content.html
@@ -1,5 +1,5 @@
 <div class="component-block-filter-content" data-bind="with: data">
-	<div class="site-frame">
+	<div class="site-frame overrule-overlap">
 		<!-- ko component: {
 			name: 'filter-menu',
 			onComplete: $root.controller.callbackCounter.get($root.controller.handleFilterMenuReady.bind($root.controller)),
