--- a/deploy/htdocs/version/src/inc/style/component/block/_block-info.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-info.scss
@@ -77,6 +77,10 @@
 		.description {
 			width: 100%;
 		}
+
+		@include respond-to(X_LARGE){
+			@include size(15 * $sizeGrid, 8 * $sizeGrid);
+		}
 	}
 
 	// Breakpoints
