--- a/deploy/htdocs/version/src/inc/style/component/block/_block-latest.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-latest.scss
@@ -16,7 +16,7 @@
 		@include size(100%, auto);
 		font-size: 0;
 		display: flex;
-		justify-content: space-around;
+		justify-content: space-between;
 		flex-wrap: wrap;
 
 		.component-block-article-teaser {
@@ -25,10 +25,26 @@
 		}
 	}
 
+	//Breakpoints
+	@include respond-to(X_LARGE) {
+		.latest-articles {
+			justify-content: space-around;
+
+			.component-block-article-teaser,
+			.component-block-info {
+				margin: 0 $sizeGrid  $sizeGrid * 2 $sizeGrid;
+			}
+		}
+	}
+
+	//Breakpoints
 	@include respond-to(LARGE) {
 		.latest-articles {
-			align-items: center;
-			flex-direction: column;
+
+			.component-block-article-teaser,
+			.component-block-info {
+				margin: 0 $sizeGrid / 2 $sizeGrid $sizeGrid / 2;
+			}
 		}
 	}
 
