--- a/deploy/htdocs/version/src/inc/style/component/block/_block-info.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-info.scss
@@ -78,9 +78,23 @@
 			width: 100%;
 		}
 
+
 		@include respond-to(X_LARGE){
-			@include size(15 * $sizeGrid, 8 * $sizeGrid);
+			width: 15 * $sizeGrid;
 		}
+
+		@include respond-to(ARTICLE_TEASER_LARGE) {
+			width: 12 * $sizeGrid;
+		}
+
+		@include respond-to(ARTICLE_TEASER_MEDIUM) {
+			width: 9 * $sizeGrid;
+
+			.inner-content {
+				padding: $sizeGrid ;
+			}
+		}
+
 	}
 
 	// Breakpoints
