--- a/deploy/htdocs/version/src/inc/style/component/block/_block-filter-content.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-filter-content.scss
@@ -28,11 +28,6 @@
 	@include respond-to(X_LARGE) {
 		.content-items {
 			justify-content: space-around;
-
-			.component-block-article-teaser,
-			.component-block-info {
-				margin: 0 $sizeGrid  $sizeGrid * 2 $sizeGrid;
-			}
 		}
 	}
 
@@ -46,12 +41,11 @@
 		}
 	}
 
-	@include respond-to(MEDIUM) {
+	@include respond-to(ARTICLE_TEASER_MEDIUM) {
 		.content-items {
-			justify-content: center;
-
+			.component-block-article-teaser,
 			.component-block-info {
-				margin-left: auto;
+				margin: 0 $sizeGrid / 4 $sizeGrid $sizeGrid / 4;
 			}
 		}
 	}
