--- a/deploy/htdocs/version/src/inc/style/component/_filter-menu.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_filter-menu.scss
@@ -7,6 +7,8 @@
 	.menu {
 		@include size(100%, $sizeGrid*2);
 		display: flex;
+		border-left: 1px solid $colorBorder;
+		border-right: 1px solid $colorBorder;
 	}
 
 	// Component Button Tag
@@ -70,7 +72,6 @@
 
 	// Filters
 	.filters {
-		position: relative;
 		display: flex;
 		flex-grow: 1;
 		height: 100%;
@@ -114,6 +115,7 @@
 		max-height: 0;
 		overflow: hidden;
 		//transition: max-height 250ms ease(easeOutExpo);
+		background: $colorWhite;
 		font-size: 0;
 
 		.inner-content {
@@ -127,13 +129,16 @@
 		}
 
 		.component-button-circle-close {
-			position: absolute;
 			@include pos(50%, $sizeGrid, auto, auto);
+			position: absolute;
 			transform: translate(0, -50%);
 		}
 
 		&.is-open {
 			max-height: $sizeGrid*2;
+			border-left: 1px solid $colorBorder;
+			border-right: 1px solid $colorBorder;
+			border-bottom: 1px solid $colorBorder;
 		}
 	}
 
@@ -193,6 +198,17 @@
 			color: $colorTertiary;
 			transition: color 250ms ease(linear);
 			@include size(7px, 4px);
+		}
+	}
+
+	@include respond-to(MEDIUM) {
+		.filter-label {
+			width: $sizeGrid*3;
+			padding-left: $sizeGrid / 2;
+		}
+
+		.filter-button {
+			padding-left: $sizeGrid / 2;
 		}
 	}
 
