--- a/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
@@ -3,9 +3,11 @@
 	text-transform: uppercase;
 	color: $colorPrimary;
 	padding: 0 $sizeGrid / 2;
+	transition: color .3s ease(easeInOutCubic);
 
 	.theme-light & {
 		color: $colorWhite;
+
 	}
 
 	.enable-solid-background & {
@@ -16,25 +18,37 @@
 		font: 700 1.2rem / 1 $fontOpenSans;
 		vertical-align: middle;
 		display: inline-block;
+		position: relative;
+
+		&:before {
+			position: absolute;
+			@include pos(auto, 0, -1px, 0%);
+			@include size(0%, 1px);
+			content: "";
+			background-color: currentColor;
+			transition: width 150ms ease(easeInOutExpo);
+		}
 	}
 
 	.icon {
 		@include size($sizeGrid);
 		margin-right: $sizeGrid / 2;
+		transform: translate3d(0, 0, 0);
 
 		path {
 			fill: currentColor;
 		}
 	}
 
+	@include hover() {
+		.text:before {
+			width: 100%;
+		}
+	}
+
 	@include respond-to(MEDIUM) {
 		@include size(auto, $sizeGrid * 2);
 		padding: 0 $sizeGrid;
-
-		.theme-light & {
-			color: $colorPrimary;
-		}
-
 	}
 
 	@include respond-to(SMALL) {
