--- a/deploy/htdocs/version/src/inc/style/component/block/_block-map.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-map.scss
@@ -77,6 +77,13 @@
 			width: 100%;
 			margin-top: $sizeGrid * 2;
 			min-height: 0;
+			height: auto;
+
+			.bottom-alignment {
+				position: relative;
+				bottom: auto;
+			}
+
 		}
 	}
 }
