Added a white layer behind the small heading + block text to avoid blue on blue text on the overlapping header
ready #226

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-text/block-text.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-text/block-text.html
@@ -1,5 +1,5 @@
 <div class="component-block-text" data-bind="with: data">
 	<div class="site-frame">
-		<div class="html-content" data-bind="html: html"></div>
+		<div class="html-content overrule-overlap" data-bind="html: html"></div>
 	</div>
 </div>
