--- a/deploy/htdocs/version/src/inc/style/component/button/_button-circle-icon.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-circle-icon.scss
@@ -13,4 +13,8 @@
 	@include respond-to(LARGE) {
 		@include size($sizeGrid);
 	}
+
+	@include respond-to(SMALL) {
+		@include size($sizeGrid * 2);
+	}
 }
