--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
@@ -21,11 +21,11 @@
 			</div>
 
 			<ul class="blog-details">
-				<li>
+				<li data-bind="attr: {title: localeManager.getString('global.title.reading_time')}">
 					<span class="icon" data-bind="icon: 'time'"></span>
 					<!-- ko text: $data.time --><!-- /ko -->
 				</li>
-				<li>
+				<li data-bind="attr: {title: localeManager.getString('global.title.view_count')}">
 					<span class="icon" data-bind="icon: 'views'"></span>
 					<!-- ko text: $root.viewCount() --><!-- /ko -->
 				</li>
