--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
@@ -67,8 +67,8 @@
 
 		<button class="service-info button" data-bind="tap: $root.handleServiceClick.bind($root)">
 
-			<span class="service-contact">
-				<h3 class="contact-heading heading heading-09">Start advertising today</h3>
+			<span class="service-contact" data-bind="with: service">
+				<h3 class="contact-heading heading heading-09" data-bind="html: $data.heading">Start advertising today</h3>
 				<p class="contact-option copy copy-02" data-bind="html: dataManager.settingsModel.initDataModel.contactOptions.email.emailAddress"></p>
 				<p class="contact-option copy copy-02">
 					<span class="icon" data-bind="icon: 'contact'"></span>
