--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-horizontal-without-icon.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-horizontal-without-icon.scss
@@ -82,14 +82,14 @@
 
 	.dashed-line {
 		@include size(100%, 1px);
-		stroke: $colorLocalMedia;
+		stroke: currentColor;
 		stroke-dasharray: 3, 3;
 		stroke-width: 1px;
 	}
 
 	.arrow {
 		@include size(10px, 20px);
-		stroke: $colorLocalMedia;
+		stroke: currentColor;
 		stroke-dasharray: 3, 3;
 		stroke-width: 1px;
 	}
