--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-vertical-graphic/slide-vertical-graphic.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-vertical-graphic/slide-vertical-graphic.html
@@ -22,12 +22,16 @@
 							value: $data.value
 						}
 					} --><!-- /ko -->
-					<p class="label copy copy-03" data-bind="html: $data.label"></p>
+					<p class="label copy copy-03">
+						<strong data-bind="html: $data.label"></strong>
+					</p>
 				</div>
 			</div>
-			<p class="statistic-label copy copy-03">
-				<strong data-bind="html: $data.label"></strong>
-			</p>
+			<!-- ko if: $data.label -->
+				<p class="statistic-label copy copy-03">
+					<strong data-bind="html: $data.label"></strong>
+				</p>
+			<!-- /ko -->
 		</div>
 	</div>
 
