--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-vertical-list/slide-vertical-list.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-vertical-list/slide-vertical-list.html
@@ -14,7 +14,7 @@
 	<div class="slide-statistics">
 		<ul class="statistics-wrapper" data-bind="foreach: data.slideData.statistics">
 			<li class="statistic">
-				<span class="step" data-bind="html: $index()"></span>
+				<span class="step" data-bind="html: $index() + 1"></span>
 				<span class="description">
 					<h3 class="heading heading-08">
 						<strong data-bind="html: $data.label"></strong>
