Add support for inline anchors

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-hero-main.scss
@@ -52,6 +52,12 @@
 		padding-left: $sizeGrid * 3;
 		color: $colorWhite;
 
+		a {
+			@extend %link;
+			@extend %link-secondary;
+			color: $colorSecondary;
+		}
+
 		.heading {
 			margin-bottom: $sizeGrid;
 		}
