--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-vertical-list.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-vertical-list.scss
@@ -1,15 +1,9 @@
 .component-slide-vertical-list {
-	.slide-statistics {
-		@include pos(50%, $sizeGrid * 8, auto, $sizeGrid * 8);
-		position: absolute;
-		transform: translateY(-50%);
-	}
-
 	.statistics-wrapper {
 		@extend %reset-list;
 	}
 
-	.statistic {
+	.statistic:not(:last-child){
 		margin-bottom: $sizeGrid;
 	}
 
@@ -18,9 +12,15 @@
 		border: 1px dashed $colorLocalMedia;
 		display: inline-block;
 		border-radius: 100%;
-		vertical-align: top;
+		vertical-align: middle;
 		font: 400 1.5rem / #{$sizeGrid } $fontOpenSans;
 		text-align: center;
+	}
+
+	.heading {
+		strong {
+			color: currentColor;
+		}
 	}
 
 	.description {
@@ -32,15 +32,17 @@
 
 	@include respond-to(LARGE) {
 		.slide-statistics {
-			@include pos(60%, $sizeGrid * 4, auto, $sizeGrid * 4);
+			top: 60%;
+			left: $sizeGrid  * 4;
+			right: $sizeGrid * 4;
 		}
 	}
 
 	@include respond-to(MEDIUM) {
 		.slide-statistics {
-			.copy-03 {
-				display: none;
-			}
+			top: auto;
+			left: auto;
+			right: auto;
 		}
 
 		.statistic {
@@ -58,22 +60,6 @@
 
 		.statistics-wrapper {
 			padding: 0 $sizeGrid * 2;
-		}
-
-		.slide-statistics {
-			@include pos(auto, auto, auto, auto);
-			@include size(100%, 270px);
-			position: relative;
-			transform: none;
-			margin-top: $sizeGrid;
-
-			.heading-08 {
-				font-size: 3rem;
-			}
-
-			.copy-03 {
-				display: block;
-			}
 		}
 	}
 }
