--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-cards.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-cards.scss
@@ -1,9 +1,4 @@
 .component-slide-cards {
-	.slide-statistics {
-		@include pos(50%, $sizeGrid * 6, auto, $sizeGrid * 6);
-		position: absolute;
-		transform: translateY(-50%);
-	}
 
 	.statistics-wrapper {
 		@extend %reset-list;
@@ -22,7 +17,7 @@
 
 	.card-label {
 		text-align: center;
-		margin-top: $sizeGrid / 4;
+		margin-top: $sizeGrid / 2;
 	}
 
 	.card-value,
@@ -34,17 +29,7 @@
 		}
 	}
 
-	@include respond-to(LARGE) {
-		.slide-statistics {
-			@include pos(50%, $sizeGrid * 4, auto, $sizeGrid * 4);
-		}
-	}
-
 	@include respond-to(MEDIUM) {
-		.slide-statistics {
-			top: 65%;
-		}
-
 		.statistics-wrapper {
 			flex-direction: column;
 		}
@@ -52,10 +37,11 @@
 		.statistic {
 			@include size(100%, auto);
 			padding: 0.5rem;
-			margin: 0.5rem 0;
+			margin: $sizeGrid / 8 0;
 			display: flex;
+			align-items: center;
+			border: none;
 		}
-
 
 		.card-image {
 			display: none;
@@ -65,20 +51,28 @@
 		.card-label {
 			display: inline-block;
 			vertical-align: middle;
+			margin-top: 0;
 		}
 
 		.card-label {
+			@include size(calc(100% - 120px), auto);
 			order: 1;
+			padding: 0 $sizeGrid / 2 0;
+			text-align: left;
 		}
 
 		.card-value {
-			@include size($sizeGrid * 2, auto);
+			@include size(120px, auto);
 			order: 0;
 		}
 	}
 
 	@include respond-to(SMALL) {
 		display: block;
+
+		.statistic {
+			margin: $sizeGrid / 2 0;
+		}
 
 		.statistics-wrapper {
 			padding: 0 $sizeGrid * 2;
