Fixed tablet layout

--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_abstract_slide.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_abstract_slide.scss
@@ -124,6 +124,7 @@
 			position: relative;
 			transform: none;
 			padding: $sizeGrid $sizeGrid * 2 0;
+			margin-top: -40px;
 
 			.heading-01 {
 				font-size: mobile-size(9.5rem);
