--- a/deploy/htdocs/version/src/inc/style/component/block/_block-image-call-to-actions.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-image-call-to-actions.scss
@@ -114,7 +114,9 @@
 		}
 
 		.call-to-actions-image {
-			object-fit: cover;
+			img {
+				object-fit: cover;
+			}
 		}
 
 		.call-to-actions-content {
