footer logo white instead of blue on blue

--- a/deploy/htdocs/version/src/inc/style/asset/_logo.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_logo.scss
@@ -41,6 +41,17 @@
 	}
 
 	/**
+	 * Footer theme
+	 */
+	.theme-footer & {
+		.arrow,
+		.text-top,
+		.text-bottom {
+			color: $colorWhite;
+		}
+	}
+
+	/**
 	 * Theme used on a solid background
 	 */
 	.enable-solid-background & {
