--- a/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
@@ -1,5 +1,5 @@
 <footer class="component-footer" data-bind="with: dataManager.settingsModel.initDataModel.footerData">
-	<section class="top-section">
+	<section class="top-section theme-footer">
 		<h1 class="logo white"> <!-- 'primary' or 'inverted' -->
 			<span class="icon" data-bind="icon: 'logo'"></span>
 		</h1>
