Set default background to empty background image

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-map-tertiary.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-map-tertiary.scss
@@ -8,7 +8,7 @@
 
 	.slides {
 		@include aspect-ratio(1100px, 550px);
-		background: $colorLightGrey;
+		background: image('map-tertiary-backgrounds/background-empty.jpg');
 	}
 
 	.solid-background {
