Update the desktop map sequence to match the new aspect ratio Add unsupported browser message

--- a/deploy/htdocs/version/src/inc/style/asset/_asset.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_asset.scss
@@ -17,4 +17,5 @@
 @import 'mapbox.scss';
 @import 'auto-complete.scss';
 @import 'hamburger/hamburger';
+@import 'not-supported';
 //@import 'grid';
