--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-horizontal-with-icon/slide-horizontal-with-icon.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-horizontal-with-icon/slide-horizontal-with-icon.html
@@ -12,41 +12,42 @@
 	</header>
 
 	<div class="slide-statistics">
+		<div class="slide-statistics-wrapper">
+			<span class="full-line">
+				<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
+					<line x1="1" y1="1" data-bind="attr: {
+						'x2': $root.deviceState() > $root.DeviceState.SMALL ? 1000 : 1,
+						'y2': $root.deviceState() > $root.DeviceState.SMALL ? 1 : 680
+					}"/>
+				</svg>
+			</span>
 
-		<span class="full-line">
-			<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
-				<line x1="1" y1="1" data-bind="attr: {
-					'x2': $root.deviceState() > $root.DeviceState.SMALL ? 1000 : 1,
-					'y2': $root.deviceState() > $root.DeviceState.SMALL ? 1 : 680
-				}"/>
-			</svg>
-		</span>
-
-		<ul class="statistics-wrapper" data-bind="foreach: data.slideData.statistics">
-			<li>
-				<div class="icon" data-bind="icon: $data.icon"></div>
-				<!-- ko if: $root.deviceState() > $root.DeviceState.SMALL -->
-					<span class="separator">
-						<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
-							<line x1="1" y1="1" x2="1" y2="100" />å
-						</svg>
-					</span>
-				<!-- /ko -->
-				<div class="description">
-					<span class="label copy copy-03" data-bind="html: $data.label"></span>
-					<!-- ko if: $root.deviceState() <= $root.DeviceState.SMALL -->
-					<span class="separator">
-						<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
-							<line x1="1" y1="1" x2="100" y2="1" />
-						</svg>
-					</span>
+			<ul class="statistics-wrapper" data-bind="foreach: data.slideData.statistics">
+				<li>
+					<div class="icon" data-bind="icon: $data.icon"></div>
+					<!-- ko if: $root.deviceState() > $root.DeviceState.SMALL -->
+						<span class="separator">
+							<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
+								<line x1="1" y1="1" x2="1" y2="100" />å
+							</svg>
+						</span>
 					<!-- /ko -->
-					<span class="value copy copy-03">
-						<strong data-bind="html: $data.value"></strong>
-					</span>
-				</div>
-			</li>
-		</ul>
+					<div class="description">
+						<span class="label copy copy-03" data-bind="html: $data.label"></span>
+						<!-- ko if: $root.deviceState() <= $root.DeviceState.SMALL -->
+						<span class="separator">
+							<svg width="100%" height="100%" class="dashed-line abs-center" preserveAspectRatio="none">
+								<line x1="1" y1="1" x2="100" y2="1" />
+							</svg>
+						</span>
+						<!-- /ko -->
+						<span class="value copy copy-03">
+							<strong data-bind="html: $data.value"></strong>
+						</span>
+					</div>
+				</li>
+			</ul>
+		</div>
 	</div>
 
 	<div class="slide-title">
